# grpphati

./: .gitignore  Pipfile  README.md  pyproject.toml  setup.sh  test2.py  test_eirene.py
dig_phat/: __init__.py  filtrations.py  grounded_ph.py  homology.py  util.py
examples/: celegans_no_pers.py  eirene_ex.py  eirene_simple_ex.py  lophat_ex.py  main.py  map_test.py  readme_1.py  readme_2.py  results.py
grounded_phat/: __init__.py  columns.py  filtrations.py  homology.py  pipelines.py
grounded_phat/column/: __init__.py  abstract.py  long_square.py  node.py
grounded_phat/filtration/: abstract.py  shortest_path.py
grounded_phat/homology/: __init__.py  abstract.py  directed_flag.py  path_homology.py  tuples.py
grounded_phat/optimisation/: __init__.py  appendages.py  components.py  wedge.py
grpphati/: __init__.py  pipelines.py
grpphati/backends/: __init__.py  _phat.py  abstract.py  eirene.py  lophat.py  persuit.py  phat.py
grpphati/column/: directed_triangle.py  edge.py
grpphati/columns/: abstract.py  directed_triangle.py  double_edge.py  edge.py  long_square.py  node.py
grpphati/filtration/: __init__.py  abstract.py  shortest_path.py
grpphati/filtrations/: __init__.py  abstract.py  shortest_path.py  truncated.py
grpphati/homologies/: abstract.py  directed_flag.py  path_homology.py  tuples.py
grpphati/homology/: abstract.py  directed_flag.py  path_homology.py  tuples.py
grpphati/optimisation/: appendages.py  wedge.py
grpphati/optimisations/: appendages.py  check_empty.py  components.py  composite.py  wedge.py
grpphati/pipelines/: grounded.py  standard.py
grpphati/results/: result.py
grpphati/sparsifiers/: __init__.py  abstract.py  generator.py  list.py
grpphati/truncations/: __init__.py
grpphati/util/: column.py  graph.py
grpphati/utils/: column.py  diagram.py  graph.py  ph.py
scripts/: build_eirene_sys.jl  build_so.sh  precompile_file.jl
tests/: conftest.py  strats.py  test_eirene.py  test_integrations.py  test_lophat.py  test_properties.py  utils.py
