[tool.poetry]
name = "dig_phat"
version = "0.1.0"
description = ""
authors = ["Thomas Chaplin <tomrchaplin@gmail.com>"]
readme = "README.md"
packages = [{include = "dig_phat"}]

[tool.poetry.dependencies]
python = "^3.10"
networkx = "^2.8.8"
wheel = "^0.38.4"
numpy = "^1.24.1"


[tool.poetry.group.dev.dependencies]
pandas = "^1.5.2"
seaborn = "^0.12.2"
joblib = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
